--- a/app/src/main/res/layout/item_myall_order.xml
+++ b/app/src/main/res/layout/item_myall_order.xml
@@ -1,253 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:layout_height="wrap_content">
+    android:orientation="vertical">
 
     <View
         android:id="@+id/item_myorder_view"
-        android:background="@color/board"
         android:layout_width="match_parent"
-        android:layout_height="10dp" />
+        android:layout_height="10dp"
+        android:background="@color/board" />
 
     <LinearLayout
-        android:background="@color/white"
-        android:padding="10dp"
-        android:layout_marginLeft="3dp"
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:layout_marginLeft="3dp"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/item_tv_shop"
-            android:textColor="@color/textBlack"
-            android:textSize="13sp"
-            android:text="梅河口香酥蛋卷店"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/textBlack"
+            android:textSize="13sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/fengexian" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/item_recyc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <View
         android:background="@color/fengexian"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+        android:layout_height="1dp" />
 
-    <LinearLayout
-        android:layout_marginRight="4dp"
-        android:layout_marginLeft="4dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/item_ivmr_orderimg"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/foot_print"
-                android:layout_width="90dp"
-                android:layout_height="90dp" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_weight="2"
-            android:layout_marginLeft="8dp"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_weight="1"
-                android:id="@+id/item_tvmr_shopname"
-                android:textColor="@color/textBlack"
-                android:textSize="14sp"
-                android:text="桂花鸭南京盐水鸭"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <!--时间-->
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/textLightGray"
-                    android:textSize="14sp"
-                    android:text="规格："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/item_tvrm_guige"
-                    android:textColor="@color/textLightGray"
-                    android:textSize="14sp"
-                    android:text="清香口味盐水鸭"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <!--时间段-->
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/item_tv_time"
-                    android:textColor="@color/textLightGray"
-                    android:textSize="14sp"
-                    android:text="数量"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/item_tvmyorder_count"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/textBlack"
-                    android:textSize="14sp"
-                    android:text="2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
 
     <!--代购费-->
     <LinearLayout
-        android:paddingBottom="@dimen/dp10"
-        android:paddingTop="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="13dp"
         android:gravity="left"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:paddingBottom="@dimen/dp10"
+        android:paddingTop="@dimen/dp10">
+
         <TextView
-            android:textColor="@color/textBlack"
-            android:textSize="14sp"
-            android:text="代购费："
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="代购费："
+            android:textColor="@color/textBlack"
+            android:textSize="14sp" />
+
         <TextView
             android:id="@+id/item_tv_daigoupr"
-            android:textColor="@color/textBlack"
-            android:textSize="14sp"
-            android:text="¥66.00"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="¥"
+            android:textColor="@color/textBlack"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <View
-        android:background="@color/board"
         android:layout_width="match_parent"
-        android:layout_height="5dp" />
+        android:layout_height="5dp"
+        android:background="@color/board" />
 
     <!--共计-->
     <LinearLayout
-        android:paddingBottom="@dimen/dp10"
-        android:paddingTop="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginRight="13dp"
         android:gravity="right"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:paddingBottom="@dimen/dp10"
+        android:paddingTop="@dimen/dp10">
 
         <TextView
-        android:textColor="@color/text_color_red"
-        android:textSize="14sp"
-        android:text="共计："
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="共计："
+            android:textColor="@color/text_color_red"
+            android:textSize="14sp" />
 
         <TextView
-        android:id="@+id/item_tvsum_money"
-        android:textColor="@color/text_color_red"
-        android:textSize="15sp"
-        android:text="¥56.00"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            android:id="@+id/item_tvsum_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¥"
+            android:textColor="@color/text_color_red"
+            android:textSize="15sp" />
 
 
     </LinearLayout>
 
     <View
-        android:background="@color/fengexian"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+        android:layout_height="0.5dp"
+        android:background="@color/fengexian" />
 
     <!--按钮-->
     <LinearLayout
-        android:background="@color/white"
         android:id="@+id/item_ll_vsbtn"
-        android:gravity="right|center_vertical"
-        android:visibility="gone"
         android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white"
+        android:gravity="right|center_vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_height="40dp">
-        <TextView
-            android:visibility="gone"
-            android:background="@drawable/btn_gray_bg"
-            android:id="@+id/itemtv_order_twopay"
-            android:layout_marginLeft="15dp"
-            android:textSize="14sp"
-            android:textColor="@color/textBlack"
-            android:gravity="center_vertical"
-            android:text="再次购买"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:visibility="gone">
 
         <TextView
-            android:visibility="gone"
-            android:background="@drawable/btn_gray_bg"
-            android:id="@+id/itemtv_order_cancel"
+            android:id="@+id/itemtv_order_twopay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:textSize="14sp"
+            android:background="@drawable/btn_gray_bg"
+            android:gravity="center_vertical"
+            android:text="再次购买"
             android:textColor="@color/textBlack"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/itemtv_order_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/btn_gray_bg"
             android:gravity="center_vertical"
             android:text="取消订单"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:visibility="gone"
-            android:background="@drawable/btn_order_red"
-            android:id="@+id/itemtv_pay_awaypay"
-            android:layout_marginLeft="15dp"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:text="付款"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:visibility="gone"
-            android:background="@drawable/btn_gray_bg"
-            android:id="@+id/itemtv_order_deleted"
-            android:layout_marginLeft="15dp"
-            android:textSize="14sp"
             android:textColor="@color/textBlack"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/itemtv_pay_awaypay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/btn_order_red"
+            android:text="付款"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/itemtv_order_deleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/btn_gray_bg"
             android:gravity="center_vertical"
             android:text="删除"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:visibility="gone"
-            android:background="@drawable/btn_order_red"
-            android:id="@+id/itemtv_comment"
-            android:layout_marginLeft="15dp"
+            android:textColor="@color/textBlack"
             android:textSize="14sp"
-            android:textColor="@color/white"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/itemtv_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/btn_order_red"
             android:gravity="center_vertical"
             android:text="评价"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
-        android:background="@color/fengexian"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+        android:layout_height="0.5dp"
+        android:background="@color/fengexian" />
 
 </LinearLayout>
