--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,22 +22,22 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:src="@mipmap/home_address_ico_black" />
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_home"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:src="@mipmap/home_address_ico_black" />-->
 
-        <TextView
-            android:id="@+id/tv_home_loc_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/iv_home"
-            android:gravity="center_vertical"
-            android:text="长春"
-            android:textColor="@color/textBlack"
-            android:textSize="14sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_home_loc_title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_toRightOf="@+id/iv_home"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:text="长春"-->
+            <!--android:textColor="@color/textBlack"-->
+            <!--android:textSize="14sp" />-->
 
         <LinearLayout
             android:id="@+id/ll_sousuo_serch"
