--- a/app/src/main/res/layout/layout_producted.xml
+++ b/app/src/main/res/layout/layout_producted.xml
@@ -148,11 +148,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_comment"
-                    android:visibility="visible"
+                <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+                    android:id="@+id/tw_refresh"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_comment"
+                        android:visibility="visible"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
             </LinearLayout>
 
             <LinearLayout
