--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -7,12 +7,42 @@
     android:orientation="vertical">
     <!--设置沉浸式状态栏，填充布局-->
     <LinearLayout
+        android:fitsSystemWindows="true"
+        android:clipToPadding="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/home_bule"
-        android:paddingTop="@dimen/padding_top"/>
+        android:paddingTop="@dimen/padding_top">
+    </LinearLayout>
 
-    <include layout="@layout/toolbar_layout" />
+    <!--<include layout="@layout/toolbar_layout" />-->
+
+    <RelativeLayout
+        android:padding="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_centerInParent="true"
+            android:textColor="@color/textBlack"
+            android:textSize="15sp"
+            android:text="购物车"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_edit"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/textBlack"
+            android:textSize="15sp"
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
     <View
         android:background="@color/line_color"
