--- a/app/src/main/res/layout/activity_modification.xml
+++ b/app/src/main/res/layout/activity_modification.xml
@@ -25,6 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:maxLines="1"
             android:hint=""
             android:textColorHint="@color/textLightGray"
