--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -285,7 +285,7 @@
             <LinearLayout
                 android:layout_marginTop="@dimen/dp10"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -308,8 +308,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
+                        android:layout_height="85dp">
                         <ImageView
                             android:id="@+id/iv_img2"
                             android:adjustViewBounds="true"
@@ -320,15 +319,14 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="85dp"
                         android:layout_marginTop="10dp"
-                        android:layout_weight="1"
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:layout_weight="1"
                             android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
+                            android:layout_height="85dp">
                             <ImageView
                                 android:id="@+id/iv_img3"
                                 android:adjustViewBounds="true"
@@ -340,7 +338,7 @@
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="85dp"
                             android:layout_marginLeft="10dp"
                             android:layout_weight="1">
                             <ImageView
