--- a/app/src/main/res/layout/item_lookshop_all.xml
+++ b/app/src/main/res/layout/item_lookshop_all.xml
@@ -96,20 +96,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/tv_attention"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/dp10"
-                android:gravity="right"
-                android:textSize="12sp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_centerVertical="true"
-                android:textColor="@color/white"
-                android:text="关注"
-                android:background="@drawable/bg_red"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!--<TextView-->
+                <!--android:id="@+id/tv_attention"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginRight="@dimen/dp10"-->
+                <!--android:gravity="right"-->
+                <!--android:textSize="12sp"-->
+                <!--android:paddingLeft="8dp"-->
+                <!--android:paddingRight="8dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:textColor="@color/white"-->
+                <!--android:text="关注"-->
+                <!--android:background="@drawable/bg_red"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content" />-->
 
         </RelativeLayout>
 
