--- a/app/src/main/res/layout/item_lvright.xml
+++ b/app/src/main/res/layout/item_lvright.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="5dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +42,6 @@
             android:text="进店"
             android:textColor="@color/white"
             android:textSize="13sp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -71,6 +69,11 @@
             android:scaleType="fitXY" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/board" />
 
 
 </LinearLayout>
