--- a/app/src/main/res/layout/layout_producted.xml
+++ b/app/src/main/res/layout/layout_producted.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -133,7 +134,7 @@
                 android:visibility="visible"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_margin="13dp"
@@ -148,18 +149,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp" />
 
-                <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
-                    android:id="@+id/tw_refresh"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_comment"
                         android:visibility="visible"
+                        android:overScrollMode="never"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
-                </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 
             </LinearLayout>
 
