--- a/app/src/main/res/layout/item_lookshop_all.xml
+++ b/app/src/main/res/layout/item_lookshop_all.xml
@@ -44,6 +44,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:baselineAligned="false"
