--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -15,18 +15,27 @@
         android:background="@color/fengexian" />
 
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <com.xingguang.localrun.view.DeleteRecyclerView
             android:id="@+id/rv_collection"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/empty"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/nomessage"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
