--- a/app/src/main/res/layout/item_pinglun.xml
+++ b/app/src/main/res/layout/item_pinglun.xml
@@ -65,6 +65,8 @@
 
 
     <LinearLayout
+        android:id="@+id/ll_img"
+        android:visibility="visible"
         android:paddingRight="13dp"
         android:paddingBottom="13dp"
         android:paddingLeft="13dp"
