--- a/app/src/main/res/layout/item_home_daigou.xml
+++ b/app/src/main/res/layout/item_home_daigou.xml
@@ -19,7 +19,6 @@
             android:id="@+id/item_ivds_bg"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@color/textBlack"
             android:scaleType="fitXY"
             android:adjustViewBounds="true" />
 
@@ -30,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text="可可美心蛋糕"
+            android:text=""
             android:textColor="@color/textBlack"
             android:textSize="16sp" />
 
@@ -46,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="@dimen/dp10"
-                android:text="¥322元"
+                android:text="¥元"
                 android:textColor="@color/textMoney"
                 android:textSize="14sp" />
 
