--- a/app/src/main/res/layout/item_lvright.xml
+++ b/app/src/main/res/layout/item_lvright.xml
@@ -53,20 +53,58 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
-        <ImageView
-            android:id="@+id/iv1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+        <RelativeLayout
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:scaleType="fitXY" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:padding="3dp"
+                android:background="#8000"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:text="¥0.01"
+                android:id="@+id/tv_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:scaleType="fitXY" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:padding="3dp"
+                android:background="#8000"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:text="¥0.01"
+                android:id="@+id/tv_price2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
