--- a/app/src/main/res/layout/activity_mine_setting.xml
+++ b/app/src/main/res/layout/activity_mine_setting.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/board"
     android:orientation="vertical"
-    android:id="@+id/parent"
-    tools:context="com.xingguang.localrun.maincode.mine.view.MineSettingActivity">
+    android:id="@+id/parent">
 
     <include layout="@layout/toolbar_layout" />
 
